deploy/overlays/local/node-zio/components/openehrtool-gateway/openehrtool-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: zio-openehrtool-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: openehrtool.zio.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zio-openehrtool-route
  namespace: dh-health
spec:
  parentRefs:
    - name: zio-openehrtool-gateway
  hostnames:
    - openehrtool.zio.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zio-openehrtool
          port: 9000
